WCAG + Style: Color Contrast on Notes in Summary, button focus fix (only visible when using keyboard), sizing of mobile dialog

--- a/assets/sheets/card.css
+++ b/assets/sheets/card.css
@@ -6,7 +6,7 @@
 }
 
 .outer-card-container {
-    background-color: #000000b2;
+    background-color: rgb(51, 51, 51);
     color: #ffffff;
     box-shadow: 1px 1px 20px rgba(255, 255, 255, 0.301);
     border-radius: 16px;
